[gd_scene load_steps=6 format=3 uid="uid://cua2238v3x33s"]

[ext_resource type="Theme" uid="uid://ceu7m4j1f8fwc" path="res://temas/default.tres" id="1_ic7vx"]
[ext_resource type="Script" path="res://escenas/items/item_creator/item_creator.gd" id="1_yhrif"]
[ext_resource type="Texture2D" uid="uid://cqeex8rqn8xcw" path="res://icon.svg" id="1_yl7us"]
[ext_resource type="FontFile" uid="uid://dhsrvr3hbr2j4" path="res://assets/fonts/PixelSport-nRVRV.ttf" id="3_gc3cx"]
[ext_resource type="AudioStream" uid="uid://clsx3bjw1grup" path="res://assets/sounds/06.wav" id="5_lsomc"]

[node name="ItemCreator" type="Node2D"]
script = ExtResource("1_yhrif")

[node name="Panel" type="Panel" parent="."]
offset_right = 1932.0
offset_bottom = 1300.0
theme = ExtResource("1_ic7vx")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
clip_contents = true
layout_direction = 3
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -489.0
offset_top = -119.0
offset_right = 951.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ic7vx")
metadata/_edit_lock_ = true

[node name="key" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="item_key" type="LineEdit" parent="Panel/VBoxContainer/key"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 294.0
offset_top = 381.0
offset_right = 560.0
offset_bottom = 437.0
placeholder_text = "key"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/key"]
layout_mode = 0
offset_left = 373.0
offset_top = 321.0
offset_right = 558.0
offset_bottom = 372.0
theme = ExtResource("1_ic7vx")
text = "Key"

[node name="nombre" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/nombre"]
layout_mode = 0
offset_left = 293.0
offset_top = 454.0
offset_right = 553.0
offset_bottom = 527.0
text = "Nombre"

[node name="item_name" type="LineEdit" parent="Panel/VBoxContainer/nombre"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 291.0
offset_top = 503.0
offset_right = 557.0
offset_bottom = 559.0
placeholder_text = "Name"

[node name="tipo" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/tipo"]
layout_mode = 0
offset_left = 384.0
offset_top = 562.0
offset_right = 547.0
offset_bottom = 611.0
theme = ExtResource("1_ic7vx")
text = "Tipo"

[node name="item_type" type="OptionButton" parent="Panel/VBoxContainer/tipo"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 279.0
offset_top = 608.0
offset_right = 546.0
offset_bottom = 680.0

[node name="unico" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="item_unique" type="CheckButton" parent="Panel/VBoxContainer/unico"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 429.0
offset_top = 672.0
offset_right = 541.0
offset_bottom = 722.0
theme = ExtResource("1_ic7vx")
text = "Unico?"
flat = true
alignment = 2
icon_alignment = 1

[node name="desc" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ic7vx")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/desc"]
layout_mode = 0
offset_left = 336.0
offset_top = 736.0
offset_right = 548.0
offset_bottom = 789.0
theme = ExtResource("1_ic7vx")
text = "Descripcion"

[node name="item_desc" type="TextEdit" parent="Panel/VBoxContainer/desc"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 134.0
offset_top = 783.0
offset_right = 556.0
offset_bottom = 947.0
theme = ExtResource("1_ic7vx")
placeholder_text = "Tipo"
wrap_mode = 1

[node name="sprite" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ic7vx")

[node name="Sprite2D" type="Sprite2D" parent="Panel/VBoxContainer/sprite"]
unique_name_in_owner = true
position = Vector2(455, 634)
scale = Vector2(2.79688, 2.71875)
texture = ExtResource("1_yl7us")

[node name="prev_sprite" type="Button" parent="Panel/VBoxContainer/sprite"]
layout_mode = 0
offset_left = 1219.0
offset_top = 571.0
offset_right = 1308.0
offset_bottom = 656.0
tooltip_text = "Anterior"
theme = ExtResource("1_ic7vx")
text = "<"

[node name="next_sprite" type="Button" parent="Panel/VBoxContainer/sprite"]
layout_mode = 0
offset_left = 674.0
offset_top = 570.0
offset_right = 763.0
offset_bottom = 655.0
tooltip_text = "Siguiente"
theme = ExtResource("1_ic7vx")
text = ">"

[node name="titulo" type="RichTextLabel" parent="Panel/VBoxContainer/sprite"]
layout_mode = 2
offset_left = -880.0
offset_top = 136.0
offset_right = 560.0
offset_bottom = 197.0
theme = ExtResource("1_ic7vx")
theme_override_colors/font_shadow_color = Color(0.777563, 0.0633744, 0.437919, 1)
theme_override_fonts/normal_font = ExtResource("3_gc3cx")
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
text = "Gestionar Items"
scroll_active = false

[node name="titulo2" type="RichTextLabel" parent="Panel/VBoxContainer/sprite"]
layout_mode = 0
offset_left = 930.0
offset_top = 343.0
offset_right = 1034.0
offset_bottom = 462.0
theme = ExtResource("1_ic7vx")
theme_override_colors/font_shadow_color = Color(0.777563, 0.0633744, 0.437919, 1)
theme_override_fonts/normal_font = ExtResource("3_gc3cx")
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
text = "Sprite"
scroll_active = false

[node name="btn" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="save" type="Button" parent="Panel/VBoxContainer/btn"]
layout_mode = 0
offset_left = 129.0
offset_top = 970.0
offset_right = 554.0
offset_bottom = 1018.0
text = "Guardar"

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="item_list" type="OptionButton" parent="Panel/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 279.0
offset_top = 223.0
offset_right = 558.0
offset_bottom = 269.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer/Control"]
layout_mode = 0
offset_left = 103.0
offset_top = 177.0
offset_right = 557.0
offset_bottom = 225.0
text = "Lista"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lsomc")

[connection signal="button_up" from="Panel/VBoxContainer/sprite/prev_sprite" to="." method="_on_prev_sprite_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/sprite/next_sprite" to="." method="_on_next_sprite_button_up"]
[connection signal="button_up" from="Panel/VBoxContainer/btn/save" to="." method="_on_save_button_up"]
[connection signal="item_selected" from="Panel/VBoxContainer/Control/item_list" to="." method="_on_item_list_item_selected"]
